# SfAgent

./: .env  .env.template  .gitignore  Instruction.md  README.md  asd  pyproject.toml  requirements.txt  schaeffler_mcp_config.json  update.md
.claude/: settings.local.json
.sf/: tasks.json
.sf/skills/visionpro-expert/: skill.md
src/: cli_prompt.py  compression.py  config.py  graph.py  llm.py  main.py  mcp_loader.py  task_manager.py
src/tools/: analysis.py  base.py  editor.py  filesystem.py  skills.py  subagent.py  tasks.py  terminal.py
src/tools/.schaeffler/skills/git_workflow/: overview.md
src/tools/.sf/skills/git_workflow/: overview.md
src/tools/src/: main.py
src/tools/tests/: test_prompt.py  verify_skills.py
tests/: test_analysis.py  test_config.py  test_editor.py  test_graph.py  test_interrupt.py  test_llm.py  test_llm_provider.py  test_main.py  test_mcp.py  test_prompt.py  test_tools.py
